[package]
name = "iching"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking"] }
rand = "0.8.5"
